--- a/_posts/Technology/014-10-08-记一次网络限制突破.md
+++ b/_posts/Technology/014-10-08-记一次网络限制突破.md
@@ -7,32 +7,32 @@ tags: 网络
 ---
 ### 前言
 ---  
-最近年用苹果电脑习惯了，再也回不到windows系统了，公司给每个新入职员工都配备了windowns笔记本，原则上不允许使用自己电脑，因此，一场攻防战打响。
+最近几年用苹果电脑习惯了，再也回不到windows系统了，公司给每个新入职员工都配备了windows笔记本，原则上不允许使用自己电脑，因此，一场攻防战打响。
 
 ### 现状
 
 1. 有线无线都可以接入公司内部网
 2. 公司电脑windows系统加入域并且封锁USB端口
-3. 无线任何设备都可以访问网络，但需要到鉴权页面用erp账号鉴权
+3. 无线任何设备都可以访问网络，但需要用erp账号鉴权
 4. 限制访问所有与邮箱相关网页
 5. 限制下载文件
-6. 公司内部有开发的聊天工具，但只有windows版本，基本上大家都用这个工具，所以这个即使在mac平台也要能用起来
+6. 公司内部有开发的聊天工具，只有windows版本，基本上大家都用这个工具，所以这个即使在mac平台也要能用起来
 7. 不允许使用QQ
 
 ### 第一轮：外围转圈了解网络大环境
 
 手头工具就是自己的mac和公司配备的windows电脑了，以下简称MAC和PC机。  
-打开PC机看了一圈，基本上是账号是加入域的，密码和邮箱密码一样，改邮箱密码后，PC机密码同步更改。PC机中常用的软件都安装好了，并且启动时有脚本删除网络共享设置。打开网页，部分网页无法访问（各类邮箱以及QQ空间和百度网盘之类，并且无法下载数据）。因为不需要设置代理，因此，一圈下来，可以得出以下结论：
+打开PC机看了一圈，基本上账号是加入域的，密码和邮箱密码一样，改邮箱密码后，PC机密码同步更改。PC机中常用的软件都安装好了，并且启动时有脚本删除网络共享设置。打开网页，部分网页无法访问（各类邮箱以及QQ空间和百度网盘之类，并且无法下载数据）。因为不需要设置代理，因此，一圈下来，可以得出以下结论：
 
 *  公司没有走代理上网，但网关出口有过滤规则
-*  对于下载限制，只过滤了rar zip等文件格式以及常用下载网站，但对于mac上的dmg文件没有做限制(估计网管用的是windows，压根不知道mac上的软件格式吧)
+*  对于下载限制，只过滤了rar zip等文件格式以及常用下载网站，对于mac上的dmg文件没有做限制(估计网管用的是windows，压根不知道mac上的软件格式吧)
 *  对于加入域的电脑，网关不需要认证，对于自己电脑或者手机之类的，连接上内部网络后会弹出认证页面，用自己的erp账号认证即可
 *  对于svn等系统只需要独立的账号和密码认证即可，无域限制
 *  加入内部网络的电脑间无法相互ping通，通过ip查看，貌似都不在同一网段，推断有可能公司做了虚拟子网的划分并在路由上做了禁大家相互ping的操作，并且即使启动服务监听本机端口，别的机器也无法连接过来(这里只是通过现象推断，无法确定)。
 
 **针对上面的情况，做以下尝试**
 
-在MAC上用公司分配的erp账号尝试加入公司域，如果加入成功，一切都简单了，但经过多次尝试，发现总是提示权限不够，推断可能加入域的账号为公司系统中内置的第三方有高权限的账号，公司分配给员工的账号权限仅限于使用域，无法直接加入域。放弃这条路。继续找别的。
+在MAC上用公司分配的erp账号尝试加入公司域，如果加入成功，一切都简单了，但经过多次尝试，发现总是提示权限不够，推断可能加入域的账号用的是公司系统中内置的第三方有高权限的账号，公司分配给员工的账号权限仅限于使用域，无法直接加入域。放弃这条路。继续找别的。
 在mac上通过验证后加入公司无线网，安装好开发环境，发现maven私服以及svn服务器都是可以正常使用的，使用vpn连接外部失败，推断网关处对vpn操作进行了限制，禁止内网vpn到外网。继续安装Goagnet，发现goagent未被封锁(gmail是处于封锁状态的)，于是架设上goagnet，chrome设置好代理，外面世界畅通无阻了，解决了以下问题：
 
 * 被限制的网站不能访问以及不能下载，通过goagent都可以访问了
@@ -47,9 +47,9 @@ tags: 网络
   
 ### 第二轮：明修栈道，暗渡陈仓
 
-**国庆期间一直在思考上面遗留问题的解决方案想到QQ是可以通过http代理的，于是想通过goagent把QQ数据转发出去，于是，回来后进行了第二轮折腾**
+**国庆期间一直在思考上面遗留问题的解决方案想到QQ是可以通过http代理的，于是想通过goagent把QQ数据转发出去，so,回来后进行了第二轮折腾**
 
-打开QQ代理设置，将地址设置为goagnet的地址，发现无法连接到网络。查找资料，发现goagent的http是不支持socket长连模式的(以前公司用过squid做代理，上QQ是没问题的)。通俗点讲，就是QQ使用的http协议不是我们通常用的短连接协议，它使用的刚好goagent又不支持。因此放弃这条路。既然http代理goagent走不通，那只能另寻出路了。vps之类的太麻烦，还需要花钱买空间，也不在考虑之列了。打开goagentX，无意中发现这货居然集成了shadowsocks(内牛满面啊)，既然http代理走不通，那我们就上企鹅走socket代理吧。剩下的就是找代理服务器地址了。万能的google加上搜索出无数热心的网友分享的代理，找了一个还算靠谱的，给连上去。当企鹅点亮的那一瞬间，也宣告了公司的QQ限制被解除。看了一下ip，是个日本的服务器，从此，QQ无忧了。
+打开QQ代理设置，将地址设置为goagnet的地址，发现无法连接到网络。查找资料，发现goagent的http是不支持socket长连模式的(以前公司用过squid做代理，上QQ是没问题的)。通俗点讲，就是QQ使用的http协议不是我们通常用的短连接协议，它使用的刚好goagent又不支持。因此放弃这条路。既然http代理goagent走不通，那只能另寻出路了。vps之类的太麻烦，还需要花钱买空间，也不在考虑之列了。打开goagentX，无意中发现这货居然集成了shadowsocks(内牛满面啊)，既然http代理走不通，那我们就上企鹅走socket代理吧。剩下的就是找代理服务器地址了。万能的google搜索出无数热心的网友分享的代理，找了一个还算靠谱的，给连上去。当企鹅点亮的那一瞬间，也宣告了公司的QQ限制被解除。看了一下ip，是个日本的服务器，从此，QQ无忧了。
 
 剩下的就是让人头疼的内部办公系统访问问题了，这个比较难搞，唯一知道的现状是公司的PC因为加域了可以正常访问，我自己的mac则不可以，即使是通过erp账号能上外网了，内网的数据还是不行。那么，既然公司的电脑可以正常访问，我的mac不行，如果让公司的pc当跳板，mac通过跳板连过去，应该就能解决这个问题了。那么，接下来，就是要两步走了，但没想到这两步，折腾死了：
 
